# ftp-mirror

./: .gitignore  makefile
debian/ftp-mirror/DEBIAN/: control
files/: ftp-mirror-config.yaml  ftp-mirror.service  ftp-mirror.timer
ftp-mirror/: Cargo.toml
ftp-mirror/src/lib/: config.rs
