[package]
name = "ftp-mirror"
version = "0.1.2"
edition = "2021"

[profile.release]
strip = true # Automatically strip symbols from the binary
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
main_error = "0.1.2"
serde = {version = "1.0.188", features = ["derive"]}
serde_yaml = "0.9.25"
thiserror = "1.0.49"

[[bin]]
name = "ftp-mirror"
path = "src/bin/ftp-mirror.rs"

[[bin]]
name = "ftp-mirror-cli"
path = "src/bin/ftp-mirror-cli.rs"

[lib]
name = "config"
path = "src/lib/config.rs"
